[package]
name = "http-response-compression"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Tower middleware for compressing HTTP response bodies"
repository = "https://github.com/bouk/http-response-compression"

[dependencies]
bytes = "1"
compression-codecs = { version = "0.4", features = ["gzip", "brotli", "zstd", "deflate"] }
compression-core = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
pin-project-lite = "0.2"
tower = { version = "0.5", features = ["util"] }
